# esp-rs-examples

./: .gitignore  LICENSE  README.md
clk/: Cargo.toml  build.rs
clk/src/: lib.rs  seven_segment.rs
dht11-demo/: Cargo.toml  wokwi.toml
dht11-demo/.marscode/: deviceInfo.json
dht11-demo/src/: dht11.rs  font.rs  lib.rs  regular_font.data  regular_font.rs  vivosans.bdf
dht11-demo/src/lib/: lib.rs
joystick/: Cargo.toml
led/: Cargo.toml
led/.cargo/: config.toml
showimg/: .gitignore  Cargo.toml  convert_to_bmp.py  jing.tga
slintui/: Cargo.toml  build.rs  convert_to_tga.py
slintui/src/: ui.slint
snake/: Cargo.toml  build.rs
snake/src/: lib.rs  snake.rs
tui/: Cargo.toml  build.rs  wokwi.toml
tui/src/: lib.rs  regular_font.data  regular_font.rs
