[package]
edition      = "2024"
name         = "dht11-demo2"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "dht11-demo2"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
path = "src/lib.rs"
test = false

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3","unstable"] }
embedded-dht-rs = { version = "0.5.0", features = ["dht11"] }


defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

critical-section = "1.2.0"
esp-alloc        = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target       = { version = "0.6.2", features = ["defmt"] }
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"
esp-rtos = { version = "0.2.0", features = ["esp32s3"] }
embedded-hal-bus = "0.3.0"
embedded-graphics-framebuf = "0.5.0"

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "defmt",
  "xtensa-semihosting",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
