[package]
edition      = "2024"
name         = "joystick"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "joystick"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = [ "esp32s3","unstable","defmt"] }
anyhow      = {version = "=1.0.102", default-features = false}
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
critical-section = "1.2.0"
esp-alloc        = "0.9.0"
rtt-target       = "0.6.2"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
nb = "1.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[build-dependencies]
embuild = "*"
anyhow = "1"
