[package]
edition = "2024"
name = "led"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "slintui"
path = "./src/bin/main.rs"


[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }
anyhow = { version = "=1.0.101", default-features = false }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-alloc = { version = "0.9.0" }
panic-rtt-target = { version = "0.2.0" }
rtt-target = { version = "0.6.2" }
mipidsi = "0.9.0"
embedded-hal = "1.0.0"
embedded-graphics = "0.8.2"
embedded-graphics-core = "0.4.1"
embedded-hal-bus = "0.3.0"
embedded-graphics-framebuf = "0.5.0"
slint = { version = "1.15.1", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }
display-interface = "0.5.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false


[build-dependencies]
slint-build = "1.15.1"
embuild = "*"
anyhow = "1"

[dev-dependencies]
image = { version = "0.25.9" }
